# CSV_file_processing

./: .coverage  README.md  main.py  pyproject.toml
src/: csv_aggregate.py  open_csv.py  strip_arg.py  tabulete.py  where_csv.py
tests/: conftest.py  test_csv_aggregate.py  test_open_csv.py  test_strip_arg.py  test_tabulate.py  test_where_csv.py  tests_csv.csv  tests_csv_aggregate.py
